메인 제퓸소개 네비게이션 수정 메뉴구조도 수정

--- a/html/main/main.html
+++ b/html/main/main.html
@@ -176,8 +176,8 @@
 								</div>
 							</div>
 							<div class="btn_box">
-								<button type="button" class="main_product_slide_btn main_product_slide_prev js_main_product_slide_btn_prev"></button>
-								<button type="button" class="main_product_slide_btn main_product_slide_btn_next js_main_product_slide_btn_next"></button>
+								<button type="button" class="main_product_slide_btn main_product_slide_prev js_main_product_slide_btn_prev"><i class="fa-solid fa-arrow-left"></i></button>
+								<button type="button" class="main_product_slide_btn main_product_slide_btn_next js_main_product_slide_btn_next"><i class="fa-solid fa-arrow-right"></i></button>
 							</div>
 						</div>
 					</div>
